--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
     <title>vicegax</title>
-    <meta name="description" content="Apps">
+    <meta name="description" content="Independent app engineer">
     <meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, Swift, Engineer, Developer, Software">
     <meta name="author" content="Vicente Garcia">
     <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@400;500&display=swap" rel="stylesheet">
     <meta property="og:site_name" content="vicegax">
 </head>
 <body>
-<div id="logo">
-    <div class="content">
-        
-    </div>
+<div class="flex">
+    Independent app engineer with quite a long history of apps for iOS, macOS and watchOS that were never featured, never successful and probably you will never know about.
 </div>
 </body>
 </html>
