--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
 </head>
 <body>
 <div class="flex">
-    Independent app engineer with quite a long history of apps for iOS, macOS and watchOS that were never featured, never successful and probably you will never know about.
+    <div id="title">
+        vicegax
+    </div>
+    <div id="menu">
+        <a href="#apps">
+            apps
+        </a>
+    </div>
+</div>
+<div id="intro">
+    <div class="flex">
+        Independent app engineer with quite a long history of apps for iOS, macOS and watchOS that were never featured, never successful and probably you will never know about.
+    </div>
 </div>
 </body>
 </html>
