--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@400&display=swap" rel="stylesheet">
     <meta property="og:site_name" content="vicegax">
 </head>
 <body>
 <div class="flex">
     <div id="title">
-        vicegax
+        <a href="/">
+            vicegax
+        </a>
     </div>
     <div id="menu">
         <a href="#apps">
@@ -28,6 +30,11 @@
 <div id="intro">
     <div class="flex">
         Independent app engineer with quite a long history of apps for iOS, macOS and watchOS that were never featured, never successful and probably you will never know about.
+    </div>
+</div>
+<div class="flex">
+    <div class="heading" id="apps">
+        apps
     </div>
 </div>
 </body>
