--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <div class="flex">
     <div id="title">
-        <a href="/">
+        <a href="#">
             vicegax
         </a>
     </div>
