--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
     <meta property="og:site_name" content="vicegax">
 </head>
 <body>
-<div class="flex">
-    <div id="title">
-        <a href="#">
-            vicegax
-        </a>
-    </div>
-    <div id="menu">
-        <a href="#apps">
-            apps
-        </a>
+<div id="top">
+    <div class="flex">
+        <div id="title">
+            <a href="#">
+                vicegax
+            </a>
+        </div>
+        <div id="menu">
+            <a href="#apps">
+                apps
+            </a>
+        </div>
     </div>
 </div>
 <div id="intro">
