--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
     <div class="heading" id="apps">
         apps
     </div>
+    <ul>
+        <li>
+            <a href="unpromoted.html">
+                Unpromoted
+            </a>
+        </li>
+    </ul>
 </div>
 </body>
 </html>
