--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
-    <title>vicegax</title>
-    <meta name="description" content="Independent app engineer">
-    <meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, Swift, Engineer, Developer, Software">
+    <title>vicegax - App Engineer</title>
+    <meta name="description" content="vicegax is an App Engineer for Apple platforms.">
+    <meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, Swift, Engineer, Developer, Software, App, Indie">
     <meta name="author" content="Vicente Garcia">
     <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
@@ -15,36 +15,13 @@
     <meta property="og:site_name" content="vicegax">
 </head>
 <body>
-<div id="top">
-    <div class="flex">
-        <div id="title">
-            <a href="#">
-                vicegax
-            </a>
-        </div>
-        <div id="menu">
-            <a href="#apps">
-                apps
-            </a>
-        </div>
+<div id="centred_content">
+    <div id="heading">
+        <img src="images/Profile-Vicente_Garcia.png" width="190px" height="190px" />
+        <h1>
+            vicegax
+        </h1>
     </div>
-</div>
-<div id="intro">
-    <div class="flex">
-        Independent app engineer with quite a long history of apps for iOS, macOS and watchOS that were never featured, never successful and probably you will never know about.
-    </div>
-</div>
-<div class="flex">
-    <div class="heading" id="apps">
-        apps
-    </div>
-    <ul>
-        <li>
-            <a href="unpromoted.html">
-                Unpromoted
-            </a>
-        </li>
-    </ul>
 </div>
 </body>
 </html>
