--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <div id="centred_content">
     <div id="heading">
-        <img src="images/Profile-Vicente_Garcia.png" width="190px" height="190px" />
+        <img src="images/Profile-Vicente_Garcia.png" width="190px" height="190px" alt="Profile picture for Vicente Garcia" />
         <h1>
             vicegax
         </h1>
