--- a/index.html
+++ b/index.html
@@ -4,23 +4,54 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
-    <title>vicegax - App Engineer</title>
-    <meta name="description" content="vicegax is an App Engineer for Apple platforms.">
-    <meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, Swift, Engineer, Developer, Software, App, Indie">
+    <title>Vicente Garcia - App Engineer</title>
+    <meta name="description" content="Vicente Garcia is an App Engineer for Apple platforms.">
+    <meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, Swift, Engineer, Developer, Software, App, Indie, vicegax, vicente, garcia">
     <meta name="author" content="Vicente Garcia">
     <link href="style.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@400&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://vicegax.com">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta property="og:site_name" content="vicegax">
 </head>
 <body>
 <div id="centred_content">
     <div id="heading">
         <img src="images/Profile-Vicente_Garcia.png" width="190px" height="190px" alt="Profile picture for Vicente Garcia" />
-        <h1>
-            vicegax
+        <h1 style="margin: 5px 0 0 0;">
+            Vicente Garcia
         </h1>
+        <h2 style="margin-top: 5px;">
+            App Engineer
+        </h2>
+    </div>
+    <h3>
+        Hello
+    </h3>
+    <p>
+        Glad that you are here. I'm constantly busy with one app or another and you can find more about them here.
+        <br /><br />
+        Also, I sometimes write about my reinforcement loops, findings and learnings, you can find more about that on my blog or social media.
+    </p>
+    <p>&nbsp;</p>
+    <h3>
+        Apps
+    </h3>
+    <p>&nbsp;</p>
+    <h3>
+        Blog
+    </h3>
+    <p>&nbsp;</p>
+    <h3>
+        Social
+    </h3>
+    <p>&nbsp;</p>
+    <div id="footer">
+        <hr />
+        <p>
+            Vicente Garcia 2022-2023
+            <br />
+            All rights reserved and stuff.
+        </p>
     </div>
 </div>
 </body>
