--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     </h3>
     <p>
         Glad that you are here. I'm constantly busy with one app or another and you can find more about them here.
-        <br /><br />
+    </p>
+    <p>
         Also, I sometimes write about my reinforcement loops, findings and learnings, you can find more about that on my blog or social media.
     </p>
     <p>&nbsp;</p>
@@ -42,17 +43,21 @@
     </h3>
     <p>&nbsp;</p>
     <h3>
+        Speaking
+    </h3>
+    <p>&nbsp;</p>
+    <h3>
         Social
     </h3>
     <p>&nbsp;</p>
-    <div id="footer">
-        <hr />
-        <p>
-            Vicente Garcia 2022-2023
-            <br />
-            All rights reserved and stuff.
-        </p>
-    </div>
+</div>
+<div id="footer">
+    <hr />
+    <p>
+        Vicente Garcia 2022-2023
+        <br />
+        All rights reserved and stuff.
+    </p>
 </div>
 </body>
 </html>
