--- a/apps/Cookie.html
+++ b/apps/Cookie.html
@@ -53,6 +53,7 @@
 		<li><span>Cookie blocker</span></li>
 		<li><span>Ad blocker</span></li>
 		<li><span>Secure connection enforcer</span></li>
+		<li><span>Automatic cookies-prompt/consent remover</span></li>
 		<li><span>Other accessibility and convenience features</span></li>
 	</ul>
 	<p>&nbsp;</p>
