--- a/apps/Cookie.html
+++ b/apps/Cookie.html
@@ -35,13 +35,13 @@
 		Cookie is a bit-sized web browser for <span class="tag">iOS</span> and <span class="tag">macOS</span>.
 	</p>
 	<p>
-		It focuses on <span class="tag">privacy</span> and <span class="tag">security</span> to achieve a truly anonymous browsing, a throughout <span class="tag">incognito</span> mode.
+		It focuses on <span class="tag">privacy</span> and <span class="tag">security</span> to achieve truly anonymous browsing throughout <span class="tag">incognito</span> mode.
 	</p>
 	<p>
-		What Cookie <b>is not</b>, though, a replacement for you day to day web browser; due to the nature of Cookie's strong built-in privacy features, there are some aspects that are not feasible to handle anymore, namely account management, online purchases, etc.
+		What Cookie <b>is not</b>, though, is a replacement for your day-to-day web browser; due to the nature of Cookie's built-in solid privacy features, some aspects are not feasible to handle anymore, namely account management, online purchases, social media postings, etc.
 	</p>
 	<p>
-		For that reason we recommend combining Cookie with your favourite <b>mainstream web browser</b>, use that other browser for reading your email, posting on social media, purchasing online. Everything else can be handled by <b>Cookie</b>.
+		Therefore, we recommend combining Cookie with your favourite <b>mainstream web browser</b>, using that other browser for reading your email, posting on social media, and purchasing online. <b>Cookie</b> can be handled everything else.
 	</p>
 	<p>&nbsp;</p>
 	
@@ -76,8 +76,8 @@
 		You can get Cookie directly on the <span class="tag">App Store</span>.
 	</p>
 	<ul>
-		<li><a href="">iOS</a></li>
-		<li><a href="">macOS</a></li>
+		<li><a href="https://apps.apple.com/gb/app/cookie/id6447298717?platform=iphone">iOS</a></li>
+		<li><a href="https://apps.apple.com/gb/app/cookie/id6447298717?platform=mac">macOS</a></li>
 	</ul>
 	<p>&nbsp;</p>
 	
