Add app store badges

--- a/apps/Cookie.html
+++ b/apps/Cookie.html
@@ -76,8 +76,16 @@
 		You can get Cookie directly on the <span class="tag">App Store</span>.
 	</p>
 	<ul>
-		<li><a href="https://apps.apple.com/gb/app/cookie/id6447298717?platform=iphone">iOS</a></li>
-		<li><a href="https://apps.apple.com/gb/app/cookie/id6447298717?platform=mac">macOS</a></li>
+		<li>
+			<a href="https://apps.apple.com/gb/app/cookie/id6447298717?platform=iphone">
+				<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" />
+			</a>
+		</li>
+		<li>
+			<a href="https://apps.apple.com/gb/app/cookie/id6447298717?platform=mac">
+				<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
+			</a>
+		</li>
 	</ul>
 	<p>&nbsp;</p>
 	
