--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <li><a href="https://github.com/vicegax">GitHub</a></li>
         <li><a href="https://twitter.com/vicegax">Twitter</a></li>
         <li><a href="https://stackoverflow.com/users/4691224/vicegax">StackOverflow</a></li>
-        <li><a href="https://www.linkedin.com/in/vicente-garcia-02448b10a/">LinkedIn</a></li>
-        <li><a href="https://www.instagram.com/vicegax/">Instagram</a></li>
+        <li><a href="https://linkedin.com/in/vicegax">LinkedIn</a></li>
+        <li><a href="https://instagram.com/vicegax">Instagram</a></li>
     </ul>
     <p>&nbsp;</p>
 </div>
