Update download link

--- a/apps/Unpromoted.html
+++ b/apps/Unpromoted.html
@@ -77,9 +77,14 @@
 	<p>
 		You can get Unpromoted directly on the <span class="tag">App Store</span>.
 	</p>
-	<ul>
-		<li><a href="">macOS</a></li>
-	</ul>
+	<h4>
+		Mac
+	</h4>
+	<p>
+		<a href="https://apps.apple.com/gb/app/unpromoted/id6447438167?platform=mac">
+			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
+		</a>
+	</p>
 	<p>&nbsp;</p>
 	
 	<h3>
