Add infinite loop

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         <span id="app_name">Unpromoted</span>
     </a>
     <hr class="separator" />
+    <a href="apps/Infinite-loop.html" class="app">
+        <img id="app_icon" src="images/App-Infinite_loop.png" width="64px" height="64px" alt="Infinite loop app icon" />
+        <span id="app_name">Infinite Loop</span>
+    </a>
+    <hr class="separator" />
     <p>&nbsp;</p>
     
     <h3>
