Update download links

--- a/apps/Infinite-loop.html
+++ b/apps/Infinite-loop.html
@@ -79,6 +79,14 @@
 			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" />
 		</a>
 	</p>
+	<h4>
+		Mac
+	</h4>
+	<p>
+		<a href="https://apps.apple.com/gb/app/infinite-loop/id6451142898?platform=mac">
+			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
+		</a>
+	</p>
 	
 	<p>&nbsp;</p>
 	
