--- a/apps/Cookie.html
+++ b/apps/Cookie.html
@@ -32,16 +32,16 @@
 		Description
 	</h3>
 	<p>
-		Cookie is a bit-sized web browser for <span class="tag">iOS</span> and <span class="tag">macOS</span>.
+		Privacy and security taken seriously.
 	</p>
 	<p>
-		It focuses on <span class="tag">privacy</span> and <span class="tag">security</span> to achieve truly anonymous browsing throughout <span class="tag">incognito</span> mode.
+		Stop websites spying on you and start browsing <b>anonymously</b>.
 	</p>
 	<p>
-		What Cookie <b>is not</b>, though, is a replacement for your day-to-day web browser; due to the nature of Cookie's built-in solid privacy features, some aspects are not feasible to handle anymore, namely account management, online purchases, social media postings, etc.
+		Block <span class="tag">cookies</span>, <span class="tag">trackers</span>, <span class="tag">ads</span>.
 	</p>
 	<p>
-		Therefore, we recommend combining Cookie with your favourite <b>mainstream web browser</b>, using that other browser for reading your email, posting on social media, and purchasing online. <b>Cookie</b> can be handled everything else.
+		Browse with the ease of knowing they do not know who you are, what are you searching for, what are your interests; browse as if the web was a safe place again.
 	</p>
 	<p>&nbsp;</p>
 	
