--- a/apps/Cookie.html
+++ b/apps/Cookie.html
@@ -52,7 +52,9 @@
 		<li><span>Anti tracker protection</span></li>
 		<li><span>Cookie blocker</span></li>
 		<li><span>Ad blocker</span></li>
+		<li><span>Private search</span></li>
 		<li><span>Secure connection enforcer</span></li>
+		<li><span>Incognito browsing</span></li>
 		<li><span>Automatic cookies-prompt/consent remover</span></li>
 		<li><span>Other accessibility and convenience features</span></li>
 	</ul>
