--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <span id="app_name">Cookie</span>
     </a>
     <hr class="separator" />
-    <a href="apps/Unpromoted.html" class="app">
-        <img id="app_icon" src="images/App-Unpromoted.png" width="64px" height="64px" alt="Unpromoted app icon" />
-        <span id="app_name">Unpromoted</span>
+    <a href="apps/Un.html" class="app">
+        <img id="app_icon" src="images/App-Un.png" width="64px" height="64px" alt="Un app icon" />
+        <span id="app_name">Un</span>
     </a>
     <hr class="separator" />
     <a href="apps/Infinite-loop.html" class="app">
@@ -74,7 +74,7 @@
         I have made a few dips into public speaking, mainly <b>Meetups</b> and some <b>Conferences</b>. 
     </p>
     <ul>
-        <li><a href="https://iosdevuk.com">iOSDevUK 2018</a></li>
+        <li><a href="https://iosdevuk.com">iOSDevUK 2019</a></li>
         <li><a href="https://www.meetup.com/cocoaheads-berlin/">CocoaHeads Berlin</a></li>
     </ul>
     <p>&nbsp;</p>
