--- a/apps/Un.html
+++ b/apps/Un.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
-	<title>Un - LinkedIn Safari Extension</title>
+	<title>Un - LinkedIn Safari Web Extension</title>
 	<meta name="description" content="Job search filter & web tools for iOS and macOS.">
 	<meta name="keywords" content="iOS, macOS, Mac, Apple, App, Safari, Extension, LinkedIn, Filter, Web">
 	<meta name="author" content="Vicente Garcia">
@@ -19,12 +19,12 @@
 </div>
 <div id="centred_content">
 	<div id="heading">
-		<img id="app_icon" src="../images/App-Un.png" width="128px" height="128px" alt="Unpromoted app icon" />
+		<img id="app_icon" src="../images/App-Un.png" width="128px" height="128px" alt="Un app icon" />
 		<h1 style="margin: 0;">
 			Un
 		</h1>
 		<h2 style="margin-top: 5px;">
-			LinkedIn Safari Extension
+			LinkedIn Safari Web Extension
 		</h2>
 	</div>
 	
@@ -43,7 +43,7 @@
 	</p>
 	<p>&nbsp;</p>
 	<h3>
-		UnPromoted
+		UnPromote
 	</h3>
 	<p>
 		Remove all Promoted Jobs from your search.
