--- a/apps/Un.html
+++ b/apps/Un.html
@@ -47,7 +47,19 @@
 	</h3>
 	<p>
 		Remove all Promoted Jobs from your search.
+	</p>
+	<p>
 		Just activate it and start looking for jobs.
+	</p>
+	<p>&nbsp;</p>
+	<h3>
+		UnFilter
+	</h3>
+	<p>
+		Remove companies you are not interested in from your results, making your search leaner.
+	</p>
+	<p>
+		You can activate it and start adding companies to the list, you can always remove them and see their posts again.
 	</p>
 	<p>&nbsp;</p>
 	
@@ -55,8 +67,6 @@
 		UpComing features
 	</h3>
 	<ul>
-		<li><span>UnFilter</span></li>
-		Remove companies you are not interested in from your results, making your search leaner.
 		<li><span>UnFollow</span></li>
 		Automatically UnFollow all people you are following, instead of clicking on each one by one, just activate this and unfollow them.
 	</ul>
