--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         <span id="app_name">Infinite Loop</span>
     </a>
     <hr class="separator" />
+    <a href="apps/Wikimind.html" class="app">
+        <img id="app_icon" src="images/App-Wikimind.png" width="64px" height="64px" alt="Wikimind app icon" />
+        <span id="app_name">Wikimind</span>
+    </a>
+    <hr class="separator" />
     <p>&nbsp;</p>
     
     <h3>
