--- a/apps/Wikimind.html
+++ b/apps/Wikimind.html
@@ -6,7 +6,7 @@
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
 	<title>Wikimind - Wikipedia mind map</title>
 	<meta name="description" content="Learn something new every day.">
-	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Wikipedia, Mind, Map, Rabbit, Hole, Diagram, Learn, Education">
+	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Wikipedia, Mind, Map, Rabbit, Hole, Diagram, Learn, Education, Knowledge">
 	<meta name="author" content="Vicente Garcia">
 	<link href="../style.css" rel="stylesheet">
 	<link rel="canonical" href="https://vicegax.com">
@@ -38,7 +38,7 @@
 		Wikimind is an visualisation tool for <span class="tag">Wikipedia</span>.
 	</p>
 	<p>
-		You can generate mind maps with <b>articles</b> and <b>concepts</b> that are of your interest.
+		You can generate knowledge mind maps with <b>articles</b> and <b>concepts</b> that are of your interest.
 	</p>
 	<p>
 		Easily jump from reading a subject to the next one, and all others related to it; follow your own <span class="tag">Rabbit Hole</span> and backtrack your trail to keep exploring different paths. Just like a neural network of information.
@@ -75,6 +75,14 @@
 		</a>
 	</p>
 	<p>&nbsp;</p> -->
+	
+	<h3>
+		Support
+	</h3>
+	<p>
+		Reach out to support at: <a mailto="support@vicegax.com">support@vicegax.com</a>
+	</p>
+	<p>&nbsp;</p>
 	
 	<h3>
 		Privacy policy
