--- a/apps/Wikimind.html
+++ b/apps/Wikimind.html
@@ -80,7 +80,7 @@
 		Support
 	</h3>
 	<p>
-		Reach out to support at: <a mailto="support@vicegax.com">support@vicegax.com</a>
+		If you need support you can reach out at: <a href="mailto:support@vicegax.com">support@vicegax.com</a> or on <span class="tag">Twitter</span> at <a href="https://twitter.com/vicegax">@vicegax</a>
 	</p>
 	<p>&nbsp;</p>
 	
