--- a/apps/Wikimind.html
+++ b/apps/Wikimind.html
@@ -66,7 +66,7 @@
 		</a>
 	</p>
 	
-	<!-- <h4>
+	<h4>
 		Mac
 	</h4>
 	<p>
@@ -74,7 +74,7 @@
 			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
 		</a>
 	</p>
-	<p>&nbsp;</p> -->
+	<p>&nbsp;</p>
 	
 	<h3>
 		Support
