--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
         <span id="app_name">Wikimind</span>
     </a>
     <hr class="separator" />
+    <a href="apps/Web.html" class="app">
+        <img id="app_icon" src="images/App-Web.png" width="64px" height="64px" alt="Web app icon" />
+        <span id="app_name">Web</span>
+    </a>
+    <hr class="separator" />
     <p>&nbsp;</p>
     
     <h3>
