--- a/apps/Web.html
+++ b/apps/Web.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
 	<title>Web - Private Browser</title>
-	<meta name="description" content="Learn something new every day.">
-	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Wikipedia, Mind, Map, Rabbit, Hole, Diagram, Learn, Education, Knowledge">
+	<meta name="description" content="Web is a iOS and macOS Web Browser.">
+	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Web, Browser, Private, Search, Secure">
 	<meta name="author" content="Vicente Garcia">
 	<link href="../style.css" rel="stylesheet">
 	<link rel="canonical" href="https://vicegax.com">
@@ -19,12 +19,12 @@
 </div>
 <div id="centred_content">
 	<div id="heading">
-		<img id="app_icon" src="../images/App-Wikimind.png" width="128px" height="128px" alt="Wikimind app icon" />
+		<img id="app_icon" src="../images/App-Web.png" width="128px" height="128px" alt="Web app icon" />
 		<h1 style="margin: 0;">
-			Wikimind
+			Web
 		</h1>
 		<h2 style="margin-top: 5px;">
-			Wikipedia mind map
+			Private Browser
 		</h2>
 	</div>
 	
@@ -32,22 +32,25 @@
 		Description
 	</h3>
 	<p>
-		Learn something new every day.
+		The <span class="tag">fastest</span> <b>searching</b> and <b>browsing</b> for iPhone, Mac, and iPad.
 	</p>
 	<p>
-		Wikimind is an visualisation tool for <span class="tag">Wikipedia</span>.
+		<span class="tag">Never</span> see <b>ads</b> again, with a Zero-Tolerance Ad Blocker; this is not like any other ad-blocker out there, it really blocks all ads, no partnerships.
 	</p>
 	<p>
-		You can generate knowledge mind maps with <b>articles</b> and <b>concepts</b> that are of your interest.
+		<span class="tag">Block</span> <b>trackers</b> and keep your browsing <b>secure</b>. Don't let websites sell your <span class="tag">personal data</span>.
 	</p>
 	<p>
-		Easily jump from reading a subject to the next one, and all others related to it; follow your own <span class="tag">Rabbit Hole</span> and backtrack your trail to keep exploring different paths. Just like a neural network of information.
+		<span class="tag">Stats</span> of trackers <b>blocked</b> and websites with malicious requests.
 	</p>
 	<p>
-		Some articles contain points of interest and locations, and you can easily visualise them on a map, all this without leaving the app.
+		<span class="tag">Keep</span> <b>private</b> whatever it is that you are doing, websites and companies should be allowed to have eyes on your online activity.
 	</p>
 	<p>
-		Learn something new every day and make Wikimind your favourite educational app.
+		<span class="tag">Reader enhancer</span> to adjust text as big as you want making your <b>reading online</b> easier and more comfortable.
+	</p>
+	<p>
+		<span class="tag">Designed</span> specifically for iPhone, Mac and iPad, all 3 of them different. Unlike all other browsers, Web is not trying to imitate the browsing experiences of the 1990s. Web is how a browser should look if it is going to be build from nothing again.
 	</p>
 	<p>&nbsp;</p>
 	
@@ -55,25 +58,17 @@
 		Download
 	</h3>
 	<p>
-		You can get Wikimind directly on the <span class="tag">App Store</span>.
+		You can get Web directly on the <span class="tag">App Store</span>.
 	</p>
 	<h4>
 		iOS
 	</h4>
 	<p>
-		<a href="https://apps.apple.com/gb/app/Wikimind/id6472438319?platform=iphone">
+		<a href="https://apps.apple.com/gb/app/Web/id6474901213?platform=iphone">
 			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" />
 		</a>
 	</p>
 	
-	<h4>
-		Mac
-	</h4>
-	<p>
-		<a href="https://apps.apple.com/gb/app/Wikimind/id6472438319?platform=mac">
-			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
-		</a>
-	</p>
 	<p>&nbsp;</p>
 	
 	<h3>
@@ -88,7 +83,7 @@
 		Privacy policy
 	</h3>
 	<p>
-		Access Wikimind's privacy policy <a href="../documents/Wikimind-Privacy_policy.pdf" download>here</a>.
+		Access Web's privacy policy <a href="../documents/Web-Privacy_policy.pdf" download>here</a>.
 	</p>
 	<p>&nbsp;</p>
 	
@@ -96,7 +91,7 @@
 <div id="footer">
 	<hr />
 	<p>
-		Vicente Garcia 2022-2023
+		Vicente Garcia 2022-2024
 		<br />
 		All rights reserved and stuff.
 	</p>
