Add web for mac

--- a/apps/Web.html
+++ b/apps/Web.html
@@ -28,6 +28,10 @@
 		</h2>
 	</div>
 	
+	<p>
+		It is all about <span class="tag">privacy</span>. This app <b>EMPOWERS</b> <b>YOU</b> to have <b>PRIVACY</b> while <b>BROWSING</b>.
+	</p>
+	
 	<h3>
 		Description
 	</h3>
@@ -66,6 +70,14 @@
 	<p>
 		<a href="https://apps.apple.com/gb/app/Web/id6474901213?platform=iphone">
 			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" />
+		</a>
+	</p>
+	<h4>
+		Mac
+	</h4>
+	<p>
+		<a href="https://apps.apple.com/gb/app/Web/id6474901213?platform=mac">
+			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
 		</a>
 	</p>
 	
