--- a/apps/Images.html
+++ b/apps/Images.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
 	<title>Images - Download images from any website</title>
-	<meta name="description" content="Web is a Safari and Web extension for iOS and macOS.">
+	<meta name="description" content="Web is a Safari and Web extension for iOS, watchOS and macOS.">
 	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Web, Safari, Extension, Images">
 	<meta name="author" content="Vicente Garcia">
 	<link href="../style.css" rel="stylesheet">
@@ -36,7 +36,7 @@
 		Description
 	</h3>
 	<p>
-		Images is a Safari and Web extension for iOS and macOS.
+		Images is a Safari and Web extension for iOS, watchOS and macOS.
 	</p>
 	<p>
 		You can download and share images from any website in high definition, you can also add a bookmark to save them for later.
