--- a/apps/Un.html
+++ b/apps/Un.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
 	<title>Un - LinkedIn Safari Web Extension</title>
-	<meta name="description" content="Job search filter & web tools for iOS and macOS.">
+	<meta name="description" content="Job search filter & web tools for iOS, watchOS and macOS.">
 	<meta name="keywords" content="iOS, macOS, Mac, Apple, App, Safari, Extension, LinkedIn, Filter, Web">
 	<meta name="author" content="Vicente Garcia">
 	<link href="../style.css" rel="stylesheet">
@@ -33,6 +33,9 @@
 	</h3>
 	<p>
 		Safari Web Extension for <span class="tag">LinkedIn</span>
+	</p>
+	<p>
+		Available on iOS, watchOS and macOS
 	</p>
 	<p>
 		Un helps you on your job search on LinkedIn.
