Update un follow

--- a/apps/Un.html
+++ b/apps/Un.html
@@ -46,7 +46,7 @@
 	</p>
 	<p>&nbsp;</p>
 	<h3>
-		UnPromote
+		Un Promote
 	</h3>
 	<p>
 		Remove all Promoted Jobs from your search.
@@ -56,7 +56,7 @@
 	</p>
 	<p>&nbsp;</p>
 	<h3>
-		UnFilter
+		Un Filter
 	</h3>
 	<p>
 		Remove companies you are not interested in from your results, making your search leaner.
@@ -65,14 +65,12 @@
 		You can activate it and start adding companies to the list, you can always remove them and see their posts again.
 	</p>
 	<p>&nbsp;</p>
-	
 	<h3>
-		UpComing features
+		Un Follow
 	</h3>
-	<ul>
-		<li><span>UnFollow</span></li>
-		Automatically UnFollow all people you are following, instead of clicking on each one by one, just activate this and unfollow them.
-	</ul>
+	<p>
+		Automatically stop following everyone on your network, instead of clicking on each one by one, just activate this and un follow them.
+	</p>
 	<p>&nbsp;</p>
 	
 	<h3>
