--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
         <span id="app_name">Images</span>
     </a>
     <hr class="separator" />
+    <a href="apps/Videos.html" class="app">
+        <img id="app_icon" src="images/App-Videos.png" width="64px" height="64px" alt="Videos app icon" />
+        <span id="app_name">Videos</span>
+    </a>
+    <hr class="separator" />
     <p>&nbsp;</p>
     
     <h3>
