--- a/apps/Un.html
+++ b/apps/Un.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="Vicente Garcia">
 	<link href="../style.css" rel="stylesheet">
 	<link rel="canonical" href="https://vicegax.com">
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="/favicon.png">
 	<meta property="og:site_name" content="vicegax">
 </head>
 <body>
