--- a/apps/Web.html
+++ b/apps/Web.html
@@ -29,6 +29,10 @@
 	</div>
 	
 	<p>
+		Make <span class="tag">Web</span> your <span class="tag">Default Browser</span> app.
+	</p>
+	
+	<p>
 		It is all about <span class="tag">privacy</span>. This app <b>EMPOWERS</b> <b>YOU</b> to have <b>PRIVACY</b> while <b>BROWSING</b>.
 	</p>
 	
