--- a/index.html
+++ b/index.html
@@ -26,13 +26,22 @@
     </div>
     
     <h3>
-        Hello
+        About
     </h3>
     <p>
-        Glad that you are here. I'm constantly busy with one app or another and you can find more about them here.
+        I started creating apps for iPhone in 2009, and made my first Mac app in 2017.
     </p>
     <p>
-        Also, I sometimes write about my reinforcement loops, findings and learnings, you can find more about that on my blog or social media.
+        Since then I have been part a few startups, and worked on some big companies also, while I got published 50+ independent apps from my personal projects on the App Store.
+    </p>
+    <p>
+        To this day, I keep developing and publishing apps on on a constant basis, and they can be downloaded from the App Store for free.
+    </p>
+    <p>
+        Rarely, I write about development and bug fixing, you can find out more about that on my blog or social media.
+    </p>
+    <p>
+        Subjects you can expect to read there are: iOS, macOS, watchOS, Swift, Objective-C, CloudKit, WebKit, SwiftUI, AppKit, UIKit, MapKit, Unit Testing, Test Driven Development, JavaScript, Safari Extensions, Privacy, Security, Safety, Anti Tracker Protection, Ad Blockers, etc.
     </p>
     <p>&nbsp;</p>
     
