--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
         <span id="app_name">Images</span>
     </a>
     <hr class="separator" />
+    <a href="apps/Images.html" class="app">
+        <img id="app_icon" src="images/App-Offline.png" width="64px" height="64px" alt="Offline Maps app icon" />
+        <span id="app_name">Offline</span>
+    </a>
+    <hr class="separator" />
     <p>&nbsp;</p>
     
     <h3>
