--- a/apps/Offline.html
+++ b/apps/Offline.html
@@ -98,14 +98,15 @@
 	<p>
 		You can get Offline directly on the <span class="tag">App Store</span>.
 	</p>
-	<!-- <h4>
+	<h4>
 		iOS
 	</h4>
 	<p>
-		<a href="https://apps.apple.com/gb/app/Images/id6499503497?platform=iphone">
+		<a href="https://apps.apple.com/gb/app/Images/id6504237531?platform=iphone">
 			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" />
 		</a>
 	</p>
+	<!-- 
 	<h4>
 		Mac
 	</h4>
@@ -129,7 +130,7 @@
 		Privacy policy
 	</h3>
 	<p>
-		Access Images' privacy policy <a href="../documents/Offline-Privacy_policy.pdf" download>here</a>.
+		Access Offline's privacy policy <a href="../documents/Offline-Privacy_policy.pdf" download>here</a>.
 	</p>
 	<p>&nbsp;</p>
 	
