--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <span id="app_name">Images</span>
     </a>
     <hr class="separator" />
-    <a href="apps/Images.html" class="app">
+    <a href="apps/Offline.html" class="app">
         <img id="app_icon" src="images/App-Offline.png" width="64px" height="64px" alt="Offline Maps app icon" />
         <span id="app_name">Offline</span>
     </a>
