--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
         <br >
         <span class="app_name">Offline</span>
     </a>
+    <a href="apps/Mesher.html" class="app">
+        <img class="app_icon" src="images/App-Mesher.png" alt="Mesher app icon" >
+        <br >
+        <span class="app_name">Mesher</span>
+    </a>
     
     </div>
     
