--- a/apps/Web.html
+++ b/apps/Web.html
@@ -45,7 +45,7 @@
 	</p>
 	
 	<p>
-		Together with an State of the Art Intelligence System for <b>Anti Tracker Protection</b>, Web is the most secure Browser available.
+		Together with a State of the Art Intelligence System for <b>Anti Tracker Protection</b>, Web is the most secure Browser available.
 	</p>
 	
 	<p>
