--- a/testing/alerts.html
+++ b/testing/alerts.html
@@ -53,7 +53,7 @@
 	
 	// Open
 	document.querySelector("#open").addEventListener("click", event => {
-		window.open(window.location.href);
+		window.open(window.location.href, "newWindow");
 	});
 	
 	// Open Blank
